samples/task/valid/R13.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><stepsection><step><cmd/></step></stepsection></steps>
  </taskbody>
</task>