samples/task/invalid/R2.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody><steps><step><cmd/></step></steps></taskbody>
</task>